--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -5,19 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Spotter_group"
              mc:Ignorable="d" 
+             
              d:DesignHeight="300" d:DesignWidth="300"
              >
     <UserControl.Resources>
         <XmlDataProvider Source="Data/Exercises.xml"
                          XPath="Exercises"
-                         x:Key="workouts"/>
+                         x:Key="workout"/>
     </UserControl.Resources>
-    
+
     <Grid Margin="0" Name="gridCalendar">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="1.15*" />
+            <ColumnDefinition Width="1.15*" />
+            <ColumnDefinition Width="1.15*" />
+            <ColumnDefinition Width=".5*" />
+            <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -26,11 +29,11 @@
             <RowDefinition Height="*"/>
 
         </Grid.RowDefinitions>
-        <Label Grid.ColumnSpan="4" Foreground="#009999" FontSize="40" HorizontalAlignment="Center">Workout Scheduler</Label>
-        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="80,80,10,10">
-            <Viewbox Height="400" Width="500">
-                <Calendar Name="calendar" 
-                  SelectionMode="SingleRange" IsTodayHighlighted="True" 
+        <Label Grid.ColumnSpan="2" Foreground="#666666" FontSize="25">Workout Scheduler</Label>
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="3"  HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
+            <Viewbox Height="300" Width="300">
+                <Calendar Name="calendar" Height="Auto" Width="Auto"
+                  Margin="6,24,-38,32" SelectionMode="SingleRange" IsTodayHighlighted="True" 
                   Background="#009999" BorderBrush="#666666" BorderThickness="5" 
                   SelectedDatesChanged="calendar_SelectedDatesChanged" 
                   />
@@ -38,34 +41,48 @@
         </StackPanel>
 
         <!-- Column 0 -->
-        <StackPanel Grid.Column="1" Grid.Row="2" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="White" FontSize="20">Start Date from Database</Label>
-            <TextBlock Name="txtStartDate" Foreground="White" FontSize="20">Test</TextBlock>
+        <StackPanel Grid.Column="0" Grid.Row="2" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Label Foreground="White" FontSize="20" >Start Date</Label>
+            <TextBlock Name="txtStartDate" Foreground="White" FontSize="20"></TextBlock>
         </StackPanel>
 
         <!-- Column 1 -->
-        <StackPanel Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="White" FontSize="20">Date Selected</Label>
-            <TextBlock Name="txtBlockDateSeleted" Foreground="White" ToolTip="Selecte a Date" FontSize="20">Date Selected</TextBlock>
-            <Separator Margin="5"></Separator>
-            <Label Foreground="White" FontSize="20">Days passed</Label>
-            <TextBlock Name="txtDaysPassed" Foreground="White" ToolTip="Selecte a Date" FontSize="20">Days from Start Date to Selected Date</TextBlock>
+        <StackPanel Grid.Column="1" Grid.Row="2" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Label Foreground="White" FontSize="20" >Date Selected</Label>
+            <TextBlock Name="txtBlockDateSeleted" FontSize="25" Foreground="White" ToolTip="Selecte a Date"></TextBlock>
         </StackPanel>
 
-
-        
         <!-- Column 2 -->
-        <StackPanel Grid.Column="2" Grid.ColumnSpan="3" Grid.Row="1" HorizontalAlignment="Right" Margin="10,10,100,10">
-            <DataGrid Margin="20" Name="dataGrid">
-                <DataGrid.RowDetailsTemplate>
-                    <DataTemplate>
-                        <StackPanel>
-                            <TextBox MinWidth="150" Name="tbDetails"></TextBox>
-                        </StackPanel>
-                    </DataTemplate>
-                </DataGrid.RowDetailsTemplate>
-            </DataGrid>
+        <StackPanel Margin="10" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Label Foreground="White" FontSize="20">Workout Day</Label>
+            <TextBlock Name="txtDaysPassed" FontSize="20" Foreground="White" ToolTip="Selecte a Date"></TextBlock>
+        </StackPanel>
+
+        <!-- Column 3 -->
+        <StackPanel Grid.Column="3" Grid.Row="1" HorizontalAlignment="Center" Margin="5">
+            <ListBox Name="lboxWorkoutDayDisplay" Foreground="White" Background="Black" 
+                     DisplayMemberPath="day"  Width="50" 
+                     ScrollViewer.ScrollChanged="lbx1_ScrollChanged"  Height="225"
+                     ItemsSource="{Binding Source={StaticResource workout}, XPath=workout}"></ListBox>
+
+        </StackPanel>
+
+        <!-- Column 4 -->
+        <StackPanel Grid.Column="4" Grid.Row="1" HorizontalAlignment="Center" Margin="5">
+            <ListBox Foreground="White"  Width="200" Height="225" Background="Black" Name="ListBoxWorkoutsResults"
+                      ScrollViewer.ScrollChanged="lbx1_ScrollChanged"
+                      DisplayMemberPath="name" ItemsSource="{Binding Source={StaticResource workout}, XPath=workout}" ></ListBox>
+            <!-- ="{Binding days}" OR ="{Binding Source={StaticResource workouts}, XPath=day2}" -->
         </StackPanel>
         
+        <!-- Column 5 -->
+        <StackPanel Grid.Column="5" Grid.Row="1" HorizontalAlignment="Center" Margin="5">
+            <ListBox Name="lboxSelectedDateWorkoutDisplay" Foreground="White" Background="Black" 
+                       Width="200" Height="225"
+                     ScrollViewer.ScrollChanged="lbx1_ScrollChanged" DisplayMemberPath="details" 
+                     
+                     ItemsSource="{Binding Source={StaticResource workout}, XPath=workout}"></ListBox>
+        </StackPanel>
+
     </Grid>
 </UserControl>
